# opticalc

./: .gitignore  DEV_NOTES.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  setup.py
src/opticalc/: __init__.py  exceptions.py  integrated.py  product.py  standard.py  util.py
tests/: conftest.py  test_color_calculation.py  test_dataclasses.py  test_integrated.py  test_integrated_spectral_averages_summary_calculation.py  test_optical_calculation.py  test_product.py  test_thermal_ir_calculation.py  test_util.py
tests/data/: sample_monolithic.json  sample_with_measured_ir.json  valid_monolithic_1.json
