[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opticalc"
version = "0.0.38"
description = ""
dependencies = [
    "pydantic>=2.13.4",
    "py_igsdb_base_data @ git+https://github.com/LBNL-ETA/py_igsdb_base_data@main",
    "pywincalc>=3.8.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
